fixed JSON output von Minizinc